--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,4 +34,32 @@ section#telefone {
 
 }
 
+iframe#tela {
+    position: relative;
+    top: 74.5px;
+    left: 20.5px;
+    height: 436px;
+    width: 247px;
+}
+
+#redes-sociais {
+    text-align: right;
+}
+
+#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.411);
+    box-sizing: border-box;
+    
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.61);
+    transform: translate(-4px,-4px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.616);
+    transition: transform .2s;
+}
+
 
